// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconRss /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconRss /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconRss /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconRss /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconRss /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconRss /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconRss /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconRss /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconRss /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconRss /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconRss /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconRss /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M44 75.5v-34c97 0 175.6 78.6 175.6 175.6h-34C185.5 138.8 122.2 75.5 44 75.5zm74.3 138.8c0 .9 0 1.8-.1 2.7h33.3v-2.7c0-58.3-47.3-105.6-105.6-105.6H44V142h1.9c40 0 72.4 32.4 72.4 72.3zM84.9 217c0-.8.1-1.5.1-2.3 0-21.4-17.3-38.7-38.7-38.7-.8 0-1.6 0-2.3.1V217h40.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconRss /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
